flux/apps/cluster1/socialstream/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: socialstream-0
subsets:
- addresses:
  - ip: 192.168.0.195
  ports:
  - port: 3000
    name: socialstream-0
