flux/apps/cluster1/socialstream/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socialstream-0
spec:
  ports:
  - name: socialstream-0
    protocol: TCP
    port: 80
    targetPort: 3000
