flux/apps/cluster1/socialstream/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialstream-0
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
  labels:
    ingress.cluster.local/probe: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - socialstream-0.home.wugi.info
    secretName: socialstream-0-ingress-certs
  rules:
  - host: socialstream-0.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: socialstream-0
            port:
              number: 80
